@@ -56,7 +56,7 @@ def find_imports(importer_config, files_or_directories, logfile=None):
 
         # For each of the sources the user has declared, identify which
         # match the text.
-        file = cache.FileMemo(filename)
+        file = cache.get_file(filename)
         matching_importers = []
         for importer in importer_config:
             try:
@@ -80,7 +80,7 @@ def identify(importer_config, files_or_directories):
     logfile = sys.stdout
     for filename, importers in find_imports(importer_config, files_or_directories,
                                             logfile=logfile):
-        file = cache.FileMemo(filename)
+        file = cache.get_file(filename)
         for importer in importers:
             logfile.write('Importer:    {}\n'.format(importer.name() if importer else '-'))
             logfile.write('Account:     {}\n'.format(importer.file_account(file)))
